--- a/client/src/components/dashboard/Home.css
+++ b/client/src/components/dashboard/Home.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+body {
+  background: linear-gradient(-20deg, #3c1053ff 20%, #00203fff 80%);
+}
+
 .layout {
   display: grid;
   grid-template-columns: 1.5fr 2fr 2fr;
@@ -11,46 +15,24 @@
   grid-template-areas: "header header header""project-bar taskbar taskbar""footer footer footer";
   column-gap: 10px;
   row-gap: 15px;
-  width: 100vw;
   height: 100vh;
+  font-family: 'montserrat';
+  color: white;
 }
 
 .header {
   grid-area: header;
-  background-color: #afafaf;
 }
 
 .taskbar {
   grid-area: taskbar;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  /* divding the task input into 2 cols*/
-  grid-template-rows: auto 1fr;
-  /* auto for input section and 1fr for covering the rest of the area in taskbar */
-  grid-template-areas: "taskInput taskInput""recommend recent";
-  row-gap: 15px;
-  column-gap: 10px;
-}
-
-.taskInput {
-  grid-area: taskInput;
-  background-color: #cfcfcf;
-}
-
-.recommend {
-  grid-area: recommend;
-  background-color: #cfcfcf;
-}
-
-.recent {
-  grid-area: recent;
-  background-color: #cfcfcf;
 }
 
 
 .project-bar {
   grid-area: project-bar;
-  background-color: #afafaf;
+  border-radius: 25px;
+  /* border-right: 2px solid rgb(33, 173, 154); */
 }
 
 .footer {
