--- a/client/src/components/dashboard/footer/footer.css
+++ b/client/src/components/dashboard/footer/footer.css
@@ -7,7 +7,7 @@ img.socialLogo {
 .footer-row {
   align-items: center;
   min-height: 7vh;
-  background-color: #1F1F1F;
+  background-color: #3c1053ff;
 }
 
 .footer-credits {
